--- a/index.html
+++ b/index.html
@@ -1,15 +1,57 @@
 <!DOCTYPE html>
 <html>
-    <script type="module" src="./index.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/ipfs-core/dist/index.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/BrowserFS/2.0.0/browserfs.min.js"></script>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Importing css styles -->
+    <link rel="stylesheet" href="./style.css" />
+    <title>NIFT</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script src="./node_modules/web3/dist/web3.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="Logo_Head.png"/>
 </html>
 <body>
+    <div class="container d-flex justify-content-md-center align-items-center vh-100" id="login_page">
+        <div class="text-center">
+            <img id="logo" src="Logo_NFT.png" class="rounded" alt="NIFT",>
+        </div>
+        <div id="create_div">
+            <form>
+                    <!-- Name input -->
+                <div class="form-outline mb-4 col-16">
+                    <input type="text" id="Name" class="form-control-lg" placeholder="Name"/>
+                </div>
 
-<h1>The input accept attribute</h1>
+                <!-- Email input -->
+                <div class="form-outline mb-4 col-16">
+                    <input type="text" id="Symbol" class="form-control-lg" placeholder="Symbol"/>
+                </div>
 
-<input type='file' id="image_input" accept='image/*'><br>
-<img id='output' style="height:100px; width:100px;">
+                <!-- Submit button -->
+                <div class="col d-flex justify-content-center">
+                    <button type='button' id="create" class="btn btn-primary btn-block mb-4">Create a NIFT</button>
+                </div>
+            </form>
+        </div>
+        <div id="access_div">
+            <form>
+                <!-- Acess button -->
+                <div class="d-flex form-outline mb-4 col-16">
+                    <button type='button' id="access_but" class="btn btn-primary btn-lg btn-block">Access </button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+
+    <!-- Importing Ethers.js script -->
+    <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"></script>
+
+    <!-- Importing our javascript file -->
+    <script src="./script.js"></script>
 
 </body>
 </html>
